force-app/main/default/objects/MUSW__Parcel__c/fields/CVRD_DS_DPA__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_DPA__c</fullName>
    <label>DPA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_DPAs</valueSetName>
    </valueSet>
</CustomField>