force-app/main/default/objects/MUSW__Parcel__c/fields/CVRD_DS_Temp_Electoral_Area__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Temp_Electoral_Area__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>Temp Electoral Area</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>