force-app/main/default/objects/MUSW__Parcel__c/fields/CVRD_PIN__c.field-meta.xml
<CustomField>
    <fullName>CVRD_PIN__c</fullName>
    <label>CVRD PIN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>